apps/clubs/byzantium/helm-blockchain/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: byzantium-helm
spec:
  virtualhost:
    fqdn: helm.byzantium.etsmtl.club
    tls:
      secretName: byzantium-helm
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: byzantium-helm-svc
          port: 80
