apps/clubs/byzantium/helm-blockchain/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: byzantium-helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: byzantium-helm
      hosts:
        - helm.byzantium.etsmtl.club
  rules:
    - host: helm.byzantium.etsmtl.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: byzantium-helm-svc
                port:
                  name: http
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: byzantium-p2p
spec:
  virtualhost:
    fqdn: helm.byzantium.etsmtl.club
    tls:
      secretName: byzantium-helm
  tcpproxy:
    services:
      - name: byzantium-helm-svc
        port: 9000
